test-1/test-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
  - name: web
    port: 80
    targetPort: web

  selector:
    app: whoami
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        ports:
        - name: web
          containerPort: 80
