test-1/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-1-service
spec:
  selector:
    app: test-1

  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-1
spec:
  selector:
    matchLabels:
      app: test-1
  replicas: 2
  template:
    metadata:
      labels:
        app: test-1
    spec:
      containers:
      - name: test-1
        image: nanajanashia/argocd-app:1.2
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
