test-1/test-1-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-1-stripprefix
  namespace: traefik-v2
spec:
  stripPrefix:
    prefixes:
    - /test
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-1-ingressroute
  namespace: traefik-v2
spec:
  entryPoints:
  - web
  routes:
  - match: PathPrefix(`/test`)
    kind: Rule
    services:
    - name: whoami
      namespace: default
      port: 80
    middlewares:
    - name: test-1-stripprefix
      namespace: traefik-v2
